change font family & fix .todo spacing

--- a/src/style.css
+++ b/src/style.css
@@ -6,6 +6,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 ul {
@@ -128,11 +129,10 @@ header {
 
 .todo {
   display: grid;
-  grid-template-columns: 20px 1fr 100px 30px 30px;
+  grid-template-columns: 20px 1fr 110px 60px 30px;
   align-items: center;
-  margin-bottom: 5px;
   font-size: 1.2rem;
-  padding: 0 10px;
+  padding: 5px 10px;
 }
 
 .todo:nth-child(even){
@@ -145,6 +145,11 @@ header {
   padding: 5px;
 }
 
+.todo span {
+  font-size: 1rem;
+}
+
+.todo span,
 .editBtn,
 .deleteBtn {
   text-align: right;
